--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -26,6 +26,12 @@
         "Type": "Type",
         "Action": "Action"
     },
+    "plugins\/rikaha\/desktop\/js\/rikaha.js": {
+        "Nom": "Nom",
+        "Afficher": "Afficher",
+        "Historiser": "Historiser",
+        "Tester": "Tester"
+    },
     "plugins\/rikaha\/core\/class\/rikaha.class.php": {
         "Vous avez oublié de saisir votre identifiant": "Vous avez oublié de saisir votre identifiant",
         "Vous avez oublié de saisir votre mot de passe": "Vous avez oublié de saisir votre mot de passe",
@@ -36,7 +42,7 @@
         "lastConfirmedRevision": "lastConfirmedRevision",
         "Révision": "Révision",
         "On\/Off": "On\/Off",
-        "Operating mode": "Operating mode",
+        "Mode": "Mode",
         "Puissance": "Puissance",
         "Temp. de consigne": "Temp. de consigne",
         "Mode éco": "Mode éco",
@@ -120,8 +126,8 @@
         "parameterVersionTFTBootLoader": "parameterVersionTFTBootLoader",
         "parameterVersionMainBoardSub": "parameterVersionMainBoardSub",
         "parameterVersionTFTSub": "parameterVersionTFTSub",
-        "parameterRuntimePellets": "parameterRuntimePellets",
-        "parameterRuntimeLogs": "parameterRuntimeLogs",
+        "Utilisation mode pellet": "Utilisation mode pellet",
+        "Utilisation mode bois": "Utilisation mode bois",
         "Conso. totale de pellet": "Conso. totale de pellet",
         "parameterFeedRateService": "parameterFeedRateService",
         "parameterServiceCountdownKg": "parameterServiceCountdownKg",
@@ -168,16 +174,18 @@
         "airFlaps": "airFlaps",
         "logRuntime": "logRuntime",
         "Statut": "Statut",
-        "Mode": "Mode",
         "Démarré depuis": "Démarré depuis",
         "Dernière maj": "Dernière maj",
         "Rafraichir": "Rafraichir",
         "Modifier la temp. de consigne": "Modifier la temp. de consigne",
-        "Votre action a èchouée, merci de consulter vos logs en mode debug": "Votre action a èchouée, merci de consulter vos logs en mode debug",
+        "Modifier le mode": "Modifier le mode",
+        "Manuel": "Manuel",
+        "Automatique": "Automatique",
+        "Confort": "Confort",
         "Not set": "Not set",
         "j": "j",
-        "Confort": "Confort",
         "Standby": "Standby",
+        "Votre action a èchouée, merci de consulter vos logs en mode debug": "Votre action a èchouée, merci de consulter vos logs en mode debug",
         "Impossible de décoder les données JSON, merci de consulter vos logs en mode debug": "Impossible de décoder les données JSON, merci de consulter vos logs en mode debug",
         "Impossible de lire les données, merci de consulter vos logs en mode debug": "Impossible de lire les données, merci de consulter vos logs en mode debug",
         "Action impossible à réaliser sur votre poêle, merci de consulter vos logs en mode debug": "Action impossible à réaliser sur votre poêle, merci de consulter vos logs en mode debug",
