[ROBOT] Action all

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -8,7 +8,7 @@
         "Mes poêles": "Mes poêles",
         "Sauvegarder": "Sauvegarder",
         "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
+        "Configuration avancée": "Advanced configuration",
         "Equipement": "Equipement",
         "Commandes": "Commandes",
         "Général": "Général",
