[ROBOT] Action all

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,51 +1,51 @@
 {
     "plugins\/rikaha\/desktop\/php\/rikaha.php": {
-        "Ajouter un poêle": "Ajouter un poêle",
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
-        "Ajouter": "Ajouter",
-        "Configuration": "Configuration",
-        "Mes poêles": "Mes poêles",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
+        "Ajouter un poêle": "Add a stove",
+        "Rechercher": "Search",
+        "Gestion": "Management",
+        "Ajouter": "Add",
+        "Configuration": "Setup",
+        "Mes poêles": "My stoves",
+        "Sauvegarder": "Save",
+        "Supprimer": "Delete",
         "Configuration avancée": "Advanced configuration",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Général": "Général",
-        "Nom du poêle": "Nom du poêle",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Equipement": "Device",
+        "Commandes": "Commands",
+        "Général": "General",
+        "Nom du poêle": "Name of the stove",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Activate",
         "Visible": "Visible",
-        "Identifiant": "Identifiant",
-        "Mot de passe": "Mot de passe",
-        "Numéro du poêle": "Numéro du poêle",
-        "Nom": "Nom",
-        "Afficher\/Historiser": "Afficher\/Historiser",
+        "Identifiant": "Login",
+        "Mot de passe": "Password",
+        "Numéro du poêle": "Stove number",
+        "Nom": "Name",
+        "Afficher\/Historiser": "Display/Historize",
         "Type": "Type",
         "Action": "Action"
     },
     "plugins\/rikaha\/desktop\/js\/rikaha.js": {
-        "Nom": "Nom",
-        "Afficher": "Afficher",
-        "Historiser": "Historiser",
-        "Tester": "Tester"
+        "Nom": "Name",
+        "Afficher": "Display",
+        "Historiser": "Historize",
+        "Tester": "Test"
     },
     "plugins\/rikaha\/core\/class\/rikaha.class.php": {
-        "Vous avez oublié de saisir votre identifiant": "Vous avez oublié de saisir votre identifiant",
-        "Vous avez oublié de saisir votre mot de passe": "Vous avez oublié de saisir votre mot de passe",
-        "Vous avez oublié de saisir le numéro du poêle": "Vous avez oublié de saisir le numéro du poêle",
-        "Nom": "Nom",
-        "ID du poêle": "ID du poêle",
+        "Vous avez oublié de saisir votre identifiant": "You forgot to enter your login",
+        "Vous avez oublié de saisir votre mot de passe": "You forgot to enter your password",
+        "Vous avez oublié de saisir le numéro du poêle": "You forgot to enter the stove number",
+        "Nom": "Name",
+        "ID du poêle": "Stove ID",
         "lastSeenMinutes": "lastSeenMinutes",
         "lastConfirmedRevision": "lastConfirmedRevision",
-        "Révision": "Révision",
-        "On\/Off": "On\/Off",
+        "Révision": "Servicing",
+        "On\/Off": "On/Off",
         "Mode": "Mode",
-        "Puissance": "Puissance",
+        "Puissance": "Power",
         "Temp. de consigne": "Temp. de consigne",
-        "Mode éco": "Mode éco",
+        "Mode éco": "Eco mode",
         "heatingTimeMon1": "heatingTimeMon1",
         "heatingTimeMon2": "heatingTimeMon2",
         "heatingTimeTue1": "heatingTimeTue1",
@@ -85,7 +85,7 @@
         "debug4": "debug4",
         "Temp. sonde déportée": "Temp. sonde déportée",
         "Temp. de flamme": "Temp. de flamme",
-        "Erreur": "Erreur",
+        "Erreur": "Error",
         "Warning": "Warning",
         "statusService": "statusService",
         "outputDischargeMotor": "outputDischargeMotor",
@@ -173,15 +173,15 @@
         "insertionMotor": "insertionMotor",
         "airFlaps": "airFlaps",
         "logRuntime": "logRuntime",
-        "Statut": "Statut",
-        "Démarré depuis": "Démarré depuis",
-        "Dernière maj": "Dernière maj",
-        "Rafraichir": "Rafraichir",
+        "Statut": "Status",
+        "Démarré depuis": "Started since",
+        "Dernière maj": "Last update",
+        "Rafraichir": "Refresh",
         "Modifier la temp. de consigne": "Modifier la temp. de consigne",
         "Modifier le mode": "Modifier le mode",
-        "Manuel": "Manuel",
-        "Automatique": "Automatique",
-        "Confort": "Confort",
+        "Manuel": "Manual",
+        "Automatique": "Automatic",
+        "Confort": "Comfort",
         "Not set": "Not set",
         "j": "j",
         "Standby": "Standby",
