--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -13,7 +13,7 @@
         "Commandes": "Commandes",
         "Général": "Général",
         "Nom du poêle": "Nom du poêle",
-        "Objet parent": "Objet parent",
+        "Objet parent": "Elternobjekt",
         "Aucun": "Aucun",
         "Catégorie": "Catégorie",
         "Activer": "Activer",
