--- a/core/i18n/ja_JP.json
+++ b/core/i18n/ja_JP.json
@@ -120,8 +120,8 @@
         "parameterFabricationNumber": "parameterFabricationNumber",
         "parameterSubTypeNumber": "parameterSubTypeNumber",
         "parameterLanguageNumber": "parameterLanguageNumber",
-        "Version firmeware carte mère": "Version firmeware carte mère",
-        "Version firmeware écran": "Version firmeware écran",
+        "Version firmware carte mère": "Version firmware carte mère",
+        "Version firmware écran": "Version firmware écran",
         "parameterVersionMainBoardBootLoader": "parameterVersionMainBoardBootLoader",
         "parameterVersionTFTBootLoader": "parameterVersionTFTBootLoader",
         "parameterVersionMainBoardSub": "parameterVersionMainBoardSub",
